Add project ref unregister tool
